--- a/changes
+++ b/changes
@@ -2147,3 +2147,16 @@ Directory modules/hasim/functional/isa-emulator
 
 - Implement ISA emulation
 - Modify m5 thread context so an outside caller can know when exit() was called.
+
+----------
+jsemer      Date: Mon May  5 17:07:30 EDT 2008  CSN: CSN-m5-8
+                  Mon May  5 21:07:30 UTC 2008
+
+
+Directory m5/ext/ply
+ ply/                      Locally Modified            7 
+
+Directory .
+ m5/                       Locally Modified            7 
+
+Added some svn:ignore properties.
