--- a/changes
+++ b/changes
@@ -2160,3 +2160,25 @@ Directory .
  m5/                       Locally Modified            7 
 
 Added some svn:ignore properties.
+
+----------
+mcadler     Date: Fri May  9 09:38:27 EDT 2008  CSN: CSN-m5-9
+                  Fri May  9 13:38:27 UTC 2008
+
+
+Directory m5/src/cpu
+ thread_context.hh         Locally Modified            8 
+
+Directory m5/src/sim
+ syscall_emul.cc           Locally Modified            8 
+
+Directory modules/hasim/functional/isa-emulator
+ m5-isa-emulator-impl.cpp  Locally Modified            8 
+ m5-isa-emulator-impl.h    Locally Modified            8 
+
+Directory modules/hasim/functional/hasim-base
+ m5-hasim-base.cpp         Locally Modified            8 
+
+- Only request update of register that change as a result of an emulated instr
+- Return exit with success or failure depending on argument to exit syscall
+- Detect Alpha HALT instruction and abort.
