--- a/changes
+++ b/changes
@@ -2475,3 +2475,17 @@ Directory modules/hasim/functional/isa-emulator
  m5-isa-emulator-impl.h    Locally Modified           28 
 
 Pass context ID to ISA emulator methods.
+
+----------
+mcadler     Date: Wed Jan  7 20:53:24 EST 2009  CSN: CSN-m5-30
+                  Thu Jan  8 01:53:24 UTC 2009
+
+
+Directory modules/hasim/functional/isa-emulator
+ m5-isa-emulator-impl.cpp  Locally Modified           29 
+
+Directory modules/hasim/functional/memory
+ m5-memory.cpp             Locally Modified           29 
+ m5-memory.h               Locally Modified           29 
+
+Pass context ID to memory and emulation methods.
