--- a/changes
+++ b/changes
@@ -2680,3 +2680,19 @@ Directory m5
 
 * SConstruct was dying if the MySQL version had a letter in it, like 5.3a.
 
+
+----------
+mcadler     Date: Tue Nov  9 16:30:02 EST 2010  CSN: CSN-m5-44
+                  Tue Nov  9 21:30:02 UTC 2010
+
+
+Directory m5/src
+ SConscript                Locally Modified           43 
+
+Directory m5/src/arch/alpha
+ SConsopts                 Locally Modified           43 
+
+Directory m5
+ SConstruct                Locally Modified           43 
+
+Update SCons scripts for recent scons package changes.
