--- a/changes
+++ b/changes
@@ -23796,3 +23796,20 @@ Directory m5-releases/20101029-f299139501f7-stable/util
  chkformat                 Locally Removed            62 
 
 Remove old gem5 version.
+
+----------
+mcadler     Date: Fri Feb  1 15:36:34 EST 2013  CSN: CSN-m5-64
+                  Fri Feb  1 20:36:34 UTC 2013
+
+
+Directory m5-releases/20130123-gem5-stable-f75ee4849c40/src/arch/alpha/linux
+ process.cc                Locally Modified           63 
+
+Directory m5-releases/20130123-gem5-stable-f75ee4849c40
+ SConstruct                Locally Modified           63 
+
+- Building library with ar sometimes failed because of the command line
+  being too long.
+
+- Change the claimed Linux kernel version to something more recent to make
+  newer run-time libraries happy.
